change main font

--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -4,6 +4,7 @@
 @import 'external/pacifico';
 @import 'external/katex';
 @import 'external/source-sans-pro';
+@import 'external/gothic-a1';
 // Variables
 @import 'base/variables';
 // Base
