--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
-$font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-logo: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-main: 'Gothic A1', Helvetica, Arial, sans-serif;
+$font-family-headings: 'Gothic A1', Helvetica, Arial, sans-serif;
+$font-family-logo: 'Gothic A1', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
 // Padding
@@ -94,4 +94,3 @@ $base0f: #FF5370 !default; // Deprecated, Opening/Closing Embedded Language Tags
 //$base0d: #66d9ef !default; // Keywords, Storage, Selector, Markup Italic, Diff Changed
 //$base0e: #ae81ff !default; // Integers, Boolean, Constants, XML Attributes, Markup Link Url
 //$base0f: #cc6633 !default; // Deprecated, Opening/Closing Embedded Language Tags e.g.
-
