--- a/_sass/external/_gothic-a1.scss
+++ b/_sass/external/_gothic-a1.scss
@@ -3,7 +3,7 @@ $ga-font-path: "../../assets/fonts/gothic-a1" !default;
 /* bold */
 @font-face {
   font-family: 'Gothic A1';
-  src: local('Gothic A1 Bold'), local('GothicA1-Bold'), url('#{ga-font-path}/GothicA1-Bold.ttf') format('truetype');
+  src: local('Gothic A1 Bold'), local('GothicA1-Bold'), url('#{$ga-font-path}/GothicA1-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
@@ -11,7 +11,7 @@ $ga-font-path: "../../assets/fonts/gothic-a1" !default;
 /* regular */
 @font-face {
   font-family: 'Gothic A1';
-  src: local('Gothic A1 Regular'), local('GothicA1-Regular'), url('#{ga-font-path}/GothicA1-Regular.ttf') format('truetype');
+  src: local('Gothic A1 Regular'), local('GothicA1-Regular'), url('#{$ga-font-path}/GothicA1-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
@@ -19,7 +19,7 @@ $ga-font-path: "../../assets/fonts/gothic-a1" !default;
 /* thin */
 @font-face {
   font-family: 'Gothic A1';
-  src: local('Gothic A1 Thin'), local('GothicA1-Thin'), url('#{ga-font-path}/GothicA1-Thin.ttf') format('truetype');
+  src: local('Gothic A1 Thin'), local('GothicA1-Thin'), url('#{$ga-font-path}/GothicA1-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
