add new font and settings

--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -5,6 +5,7 @@
 @import 'external/katex';
 @import 'external/source-sans-pro';
 @import 'external/gothic-a1';
+@import 'external/spoqa-han-sans-neo';
 // Variables
 @import 'base/variables';
 // Base
