--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
-$font-family-main: 'Gothic A1', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Gothic A1', Helvetica, Arial, sans-serif;
-$font-family-logo: 'Gothic A1', Helvetica, Arial, sans-serif;
+$font-family-main: 'Spoqa Han Sans Neo', 'Gothic A1', Helvetica, Arial, sans-serif;
+$font-family-headings: 'Spoqa Han Sans Neo', 'Gothic A1', Helvetica, Arial, sans-serif;
+$font-family-logo: 'Spoqa Han Sans Neo', 'Gothic A1', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
 // Padding
