update main design
responsive

--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -16,19 +16,19 @@
 }
 
 %padding-post {
-  padding: $padding-x-small $padding-x-large;
-  @media (max-width: $xl-break) {
-    padding: $padding-x-small ($padding-large * 2);
-  }
-  @media (max-width: $l-break) {
-    padding: $padding-x-small $padding-large;
-  }
-  @media (max-width: $m-break) {
-    padding: $padding-x-small $padding-medium;
-  }
-  @media (max-width: $sm-break) {
-    padding: $padding-x-small $padding-small;
-  }
+  padding: $padding-x-small $padding-x-small;
+  // @media (max-width: $xl-break) {
+  //   padding: $padding-x-small ($padding-large * 2);
+  // }
+  // @media (max-width: $l-break) {
+  //   padding: $padding-x-small $padding-x-small;
+  // }
+  // @media (max-width: $m-break) {
+  //   padding: $padding-x-small $padding-medium;
+  // }
+  // @media (max-width: $sm-break) {
+  //   padding: $padding-x-small $padding-small;
+  // }
 }
 
 %padding-header {
