update main design

--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -32,13 +32,13 @@
 }
 
 %padding-header {
-  padding: $padding-medium $padding-large;
-  @media (min-width: $xl-break) {
-    padding: $padding-large $padding-large;
-  }
-  @media (max-width: $sm-break) {
-    padding: $padding-large;
-  }
+  padding: $padding-x-small $padding-large;
+  // @media (min-width: $xl-break) {
+  //   padding: $padding-large $padding-large;
+  // }
+  // @media (max-width: $sm-break) {
+  //   padding: $padding-large;
+  // }
 }
 
 .header-txt-shadow {
