--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -34,8 +34,8 @@
   }
 
   .avatar {
-    height: 2.5em;
-    width: 2.5em;
+    height: 3em;
+    width: 3em;
     float: left;
     border-radius: 0.2em;
     padding: 5px;
@@ -59,9 +59,10 @@ nav {
     margin: 0;
     padding: 0;
     list-style: none;
-    line-height: 2.5;
+    line-height: 3;
     float: right;
     display: block;
+    font-weight: bold;
   }
 
   li {
@@ -114,9 +115,9 @@ nav {
       width: 100%;
       overflow: hidden;
 
-      /* fade out, then shrink */
-      transition: opacity .25s 0s, font-size .25s 0s;
-      transition-delay: 0s;
+      // /* fade out, then shrink */
+      // transition: opacity .25s 0s, font-size .25s 0s;
+      // transition-delay: 0s;
 
       &.hide {
         font-size: 0;
