--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,6 +7,9 @@
 			<img alt="logo img" class="avatar" src="{{ site.avatar | relative_url }}" />
 		</a>
         {% endif %}
+				<a class="site-title" aria-label="{{ site.title }}" href="{{ '/' | relative_url }}">
+        {{ site.title }}
+		</a>
 	</div>
 
     <!-- Toggle menu -->
