move search to main

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,3 +1,8 @@
+<input type="text" id="search-input" placeholder="검색어를 입력하세요.." class="search-bar" autofocus>
+<br>
+<br>
+<ul id="results-container"></ul>
+
 <div class="posts">
     {% for post in paginator.posts %}
     <div class="post-teaser">
@@ -29,6 +34,26 @@
       </span>
     </div>
     {% endfor %}
+
+    {% include blog_nav.html %}
+
 </div>
 
-{% include blog_nav.html %}
+<section>
+    <script type="text/javascript">
+        SimpleJekyllSearch({
+            searchInput: document.getElementById('search-input'),
+            resultsContainer: document.getElementById('results-container'),
+            json: '{{ "/assets/data/search.json" | relative_url }}',
+            searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="meta">{date} <div class="right"><i class="fa fa-tag"></i> {tags}</div></div><p>{excerpt}</p></div><hr> ',
+            noResultsText: '{{ site.data.language.str_no_result_found | default: "검색 결과가 없습니다." }}',
+            limit: 10,
+            fuzzy: false,
+            exclude: []
+        })
+
+        $('#search-input').on('input', function(){
+          $('div.posts').css('display', $(this).val() !== ''? 'block' : 'none');
+        });
+    </script>
+</section>
