--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,5 +1,5 @@
 <div class="search-container">
-  <input type="text" id="search-input" class="search-bar" placeholder="검색어를 입력하세요.." style="display: block;">
+  <input type="text" id="search-input" placeholder="검색어를 입력하세요..">
   <div class="find-icon">
     <i class="fa fa-search" aria-hidden="true"></i>
   </div>
