--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -1,6 +1,6 @@
 .search-container {
-  position: relative;
-  height: 2em;
+  max-width: $m-break;
+  margin: 5px auto;
 
   #search-input {
     display: none;
@@ -13,7 +13,7 @@
     right: 1em;
     top: .5em;
   }
-  
+
   #results-container {
     padding: 0;
     margin: 0;
@@ -31,7 +31,6 @@
 }
 
 .search-bar {
-  display: block;
   width: 100%;
   height: 46px;
   padding: 6px 12px;
