--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -44,7 +44,7 @@
 </div>
 
 <section>
-    <script type="text/javascript">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js">
       $('.find-icon').click(function(){
         $('#search-input').toggle();
         if ($('#search-input:visible').length > 0)
