--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -8,7 +8,7 @@
     margin-left: auto;
   }
 
-  #search-container .find-icon {
+  .find-icon {
     position: absolute;
     right: 1em;
     top: .5em;
