--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -45,32 +45,23 @@
 
 <section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js">
-      $(function() {
-        $('.find-icon').click(function() {
-          if($('#search-input').css('display') == 'none') {
-            $('#search-input').css('display','block');
-          } else {
-            if ($('#search-input').length > 0) {
-              ;
-            }
-            else {
-              $('#search-input').css('display','none');
-              $('#results-container').hide();
-            }
-          }
+      $(function(){
+        $('.find-icon').click(function(){
+          $('#search-input').toggle();
         });
-
-        SimpleJekyllSearch({
-            searchInput: document.getElementById('search-input'),
-            resultsContainer: document.getElementById('results-container'),
-            json: '{{ "/assets/data/search.json" | relative_url }}',
-            searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="meta">{date} <div class="right"><i class="fa fa-tag"></i> {tags}</div></div><p>{excerpt}</p></div><hr> ',
-            noResultsText: '{{ site.data.language.str_no_result_found | default: "검색 결과가 없습니다." }}',
-            limit: 10,
-            fuzzy: false,
-            exclude: []
-        });
-        $('#results-container').show();
       });
+
+</script>
+    <script type="text/javascript">
+        SimpleJekyllSearch({
+          searchInput: document.getElementById('search-input'),
+          resultsContainer: document.getElementById('results-container'),
+          json: '{{ "/assets/data/search.json" | relative_url }}',
+          searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="meta">{date} <div class="right"><i class="fa fa-tag"></i> {tags}</div></div><p>{excerpt}</p></div><hr> ',
+          noResultsText: '{{ site.data.language.str_no_result_found | default: "검색 결과가 없습니다." }}',
+          limit: 10,
+          fuzzy: false,
+          exclude: []
+        })
     </script>
 </section>
