--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -5,15 +5,15 @@
   position: relative;
 
   #search-input {
-    display: none;
+    display: block;
     width: 15em;
     margin-left: auto;
-    
+
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 3px;
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
-    box-sizing: border-box;
+    box-sizing: border-box
     padding: 10px;
     transition: border-color;
   }
