--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -3,8 +3,6 @@
   height: 2em;
   margin: 5px auto;
   position: relative;
-
-
 }
 
 #search-input {
@@ -16,7 +14,7 @@
   border: 1px solid #ddd;
   border-radius: 3px;
   box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
-  box-sizing: border-box
+  box-sizing: border-box;
   padding: 10px;
   transition: border-color;
 }
