Revert "header update"
This reverts commit 157e92d7aa76028c48474459794230fb704bca98.

--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -46,9 +46,7 @@
     float: left;
     font-weight: bold;
     font-family: $font-family-logo;
-    font-size: (4em / 3);
-    line-height: 2.3;
-    margin-left: 5px;
+    font-size: 1.3em;
   }
 }
 
@@ -99,6 +97,12 @@ nav {
 }
 
 @media screen and (max-width: $break) {
+
+  .site-header {
+    .site-title {
+      margin-top: 7px;
+    }
+  }
 
   nav {
     height: auto;
