--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,4 +1,4 @@
-<input type="text" id="search-input" placeholder="검색어를 입력하세요..">
+<input type="text" id="search-input" class="search-bar" placeholder="검색어를 입력하세요..">
 <div class="find-icon">
   <i class="fa fa-search" aria-hidden="true"></i>
 </div>
