--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -1,10 +1,10 @@
-.search-container {
-  max-width: $m-break;
-  height: 2em;
-  margin: 5px auto;
-  position: relative;
-}
-
+// .search-container {
+//   max-width: $m-break;
+//   height: 2em;
+//   margin: 5px auto;
+//   position: relative;
+// }
+//
 // #search-input {
 //   display: block;
 //   width: 15em;
@@ -18,13 +18,13 @@
 //   padding: 10px;
 //   transition: border-color;
 // }
-
-.find-icon {
-  position: absolute;
-  right: 1em;
-  top: .5em;
-}
-
+//
+// .find-icon {
+//   position: absolute;
+//   right: 1em;
+//   top: .5em;
+// }
+//
 // #results-container {
 //   padding: 0;
 //   margin: 0;
