--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,8 +1,10 @@
-<input type="text" id="search-input" placeholder="Enter keywords..." class="search-bar" autofocus>
-<br>
-<br>
-<ul id="results-container"></ul>
-
+<div class="search-container">
+  <input type="text" id="search-input" placeholder="Enter keywords..." class="search-bar" autofocus>
+  <div class="find-icon">
+    <i class="fa fa-search" aria-hidden="true"></i>
+  </div>
+  <ul id="results-container"></ul>
+</div>
 <div class="posts">
     {% for post in paginator.posts %}
     <div class="post-teaser">
