search result window design update

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -44,7 +44,7 @@
           searchInput: document.getElementById('search-input'),
           resultsContainer: document.getElementById('results-container'),
           json: '{{ "/assets/data/search.json" | relative_url }}',
-          searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="right meta">{date}</div><hr> ',
+          searchResultTemplate: '<div class="search-title"><a href="{url}"><h3> {title}</h3></a><div class="search-date">{date}</div></div><hr> ',
           noResultsText: '{{ site.data.language.str_no_result_found | default: "No result found" }}',
           limit: 10,
           fuzzy: false,
