--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -12,7 +12,7 @@
 
     background: $background-color none;
     color: $text-color;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -57,27 +57,38 @@
   }
 
   #results-container {
-    padding: 0;
-    margin: 0;
+    padding: 5px;
     width: 50%;
     background: #FFF;
-    border: 1px solid #CCC;
+    border: 1px solid #ccc;
     position: absolute;
     right: 0;
-    top: 2.6em;
+    top: 2.7em;
     list-style: none;
     -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    border-radius: 2px;
+    border-radius: 3px;
   }
 
-  .search-title a {
-    h3 {
-      margin: 0;
+  .search-title {
+    a {
+      display: block;
+      // font-weight: bold;
+      font-size: 1.3em;
+      color: $text-color;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
 
-    &:hover {
-      text-decoration: none;
+    hr {
+      margin: 5px 0;
+    }
+
+    .search-date {
+      color: #636363;
+      font-size: .9em;
     }
   }
 }
