--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
     <!-- Logo and title -->
 	<div class="branding">
         {% if site.avatar %}
-		<a href="{{ '/' | relative_url }}">
+		<a href="{{ '/' | relative_url }}" id="toggle">
 			<img alt="logo img" class="avatar" src="{{ site.avatar | relative_url }}" />
 		</a>
         {% endif %}
@@ -14,19 +14,26 @@
 
     <!-- Toggle menu -->
     <nav class="clear">
-    <a aria-label="pull" id="pull" class="toggle" href="#">
+    <!-- <a aria-label="pull" id="pull" class="toggle" href="#">
     <i class="fa fa-bars fa-lg"></i>
-    </a>
+    </a> -->
+		<a href="#menu" id="toggle"><span></span></a>
 
     <!-- Menu -->
-    <ul class="hide">
+		<div id="menu">
+    <!-- <ul class="hide"> -->
+		<ul>
         {% assign name_page = "" %}
 
         {% for page in site.pages %}
             {% unless page.title == null or page.hide or name_page contains page.title %}
-            <li class="separator"> | </li>
+            <!-- <li class="separator"> | </li> -->
             <li>
-                <a class="clear" aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
+                <!-- <a class="clear" aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
+                    {% if page.icon %} <i class="fa {{ page.icon }}" aria-hidden="true"></i>
+                    {% else %} {{ page.title }} {% endif%}
+                </a> -->
+								<a aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
                     {% if page.icon %} <i class="fa {{ page.icon }}" aria-hidden="true"></i>
                     {% else %} {{ page.title }} {% endif%}
                 </a>
@@ -35,6 +42,7 @@
             {% assign name_page = page.title | append: name_page %}
         {% endfor %}
     </ul>
+		</div>
 
 	</nav>
 </header>
