--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -46,10 +46,91 @@
     float: left;
     font-weight: bold;
     font-family: $font-family-logo;
-    font-size: 1.3em;
+    font-size: (4em / 3);
+    line-height: 2.3em;
+    margin-left: .1em;
   }
 }
 
+/////////////////////////////////////////
+
+#toggle {
+  display: block;
+  width: 28px;
+  height: 30px;
+  margin: 30px auto 10px;
+}
+
+#toggle span:after,
+#toggle span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
+}
+#toggle span:after{
+  top: 9px;
+}
+#toggle span {
+  position: relative;
+  display: block;
+}
+
+#toggle span,
+#toggle span:after,
+#toggle span:before {
+  width: 100%;
+  height: 5px;
+  background-color: #888;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  border-radius: 2px;
+}
+
+/* on activation */
+#toggle.on span {
+  background-color: transparent;
+}
+#toggle.on span:before {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+#toggle.on span:after {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
+#toggle.on + #menu {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* menu appearance*/
+#menu {
+  position: relative;
+  color: #999;
+  width: 200px;
+  padding: 10px;
+  margin: auto;
+  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  text-align: center;
+  border-radius: 4px;
+  background: white;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+  /* just for this demo */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .4s;
+}
+#menu:after {
+  position: absolute;
+  top: -15px;
+  left: 95px;
+  content: "";
+  display: block;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 20px solid white;
+}
+
+/////////////////////////////////////////
 nav {
   list-style: none;
   margin: 0;
@@ -57,9 +138,8 @@ nav {
 
   ul {
     margin: 0;
-    padding: 0;
     list-style: none;
-    line-height: 3;
+    line-height: 3em;
     float: right;
     display: block;
     font-weight: bold;
@@ -98,12 +178,6 @@ nav {
 
 @media screen and (max-width: $break) {
 
-  .site-header {
-    .site-title {
-      margin-top: 7px;
-    }
-  }
-
   nav {
     height: auto;
 
@@ -113,6 +187,7 @@ nav {
 
     ul {
       width: 100%;
+      line-height: 2em;
       overflow: hidden;
 
       // /* fade out, then shrink */
