--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,7 +17,7 @@
     <!-- <a aria-label="pull" id="pull" class="toggle" href="#">
     <i class="fa fa-bars fa-lg"></i>
     </a> -->
-		<a href="#menu" id="toggle"><span></span></a>
+		<a href="#menu" id="toggle2"><span></span></a>
 
     <!-- Menu -->
 		<div id="menu">
