--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -77,7 +77,7 @@ nav {
       display: block;
       width:28px;
       height: 30px;
-      margin: 15px 5px 0px auto;
+      margin: 18px 5px auto auto;
 
       span {
         position: relative;
@@ -99,7 +99,7 @@ nav {
       span,
       span:before,
       span:after {
-        width: 100x;
+        width: 100%;
         height: 5px;
         background-color: $text-color;
         transition: all 0.3s;
@@ -130,7 +130,7 @@ nav {
 /* ---- Responsive ---- */
 
 @media (min-width: #{$break+1}) {
-  a#pull {
+  nav a#pull {
     display: none;
   }
 }
