--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,13 +20,14 @@
 
 	    <!-- Menu -->
 			<div class="dropdownContain">
-				<div>
+				<div class="dropOut">
 					<div class="triangle"></div>
 			    <ul class="hide">
 			        {% assign name_page = "" %}
 
 			        {% for page in site.pages %}
 			            {% unless page.title == null or page.hide or name_page contains page.title %}
+									<li class="separator"> | </li>
 			            <li>
 			                <a class="clear" aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
 			                    {% if page.icon %} <i class="fa {{ page.icon }}" aria-hidden="true"></i>
