--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -57,6 +57,58 @@ nav {
   margin: 0;
   padding: 0;
 
+  .dropdownContain {
+    position: absolute;
+    z-index: 2;
+    right: 5px;
+
+    .dropOut {
+      background: white;
+      float: left;
+      margin-top: 0px;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      -webkit-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+      -moz-box-shadow: 0 1px 6px rgba(0,0,0,.15);
+      box-shadow: 0 1px 6px rgba(0,0,0,.15);
+      -webkit-transition: all .1s ease-out;
+      -moz-transition: all .1s ease-out;
+      -ms-transition: all .1s ease-out;
+      -o-transition: all .1s ease-out;
+      transition: all .1s ease-out;
+
+      .triangle {
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 8px solid white;
+        top: -8px;
+        right: 10px;
+        margin-left: -8px;
+      }
+
+      ul {
+        padding: 10px;
+
+        li {
+          text-align: center;
+          color: #777;
+          -webkit-border-radius: 4px;
+          -moz-border-radius: 4px;
+          border-radius: 4px;
+          -webkit-transition: background .1s ease-out;
+          -moz-transition: background .1s ease-out;
+          -ms-transition: background .1s ease-out;
+          -o-transition: background .1s ease-out;
+          transition: background .1s ease-out;
+        }
+      }
+    }
+  }
+
   ul {
     margin: 0;
     list-style: none;
@@ -140,10 +192,14 @@ nav {
   nav {
     height: auto;
 
-    ul {
-      width: 100%;
-      line-height: 2em;
-      overflow: hidden;
+    .separator {
+      display: none !important;
+    }
+
+    // ul {
+    //   width: 100%;
+    //   line-height: 2em;
+    //   overflow: hidden;
 
       &.hide {
         font-size: 0;
