--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -197,7 +197,7 @@ nav {
       display: none !important;
     }
 
-    // ul {
+    ul {
     //   width: 100%;
     //   line-height: 2em;
     //   overflow: hidden;
