--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -119,11 +119,6 @@ nav {
         transform: rotate(-45deg) translate(7px, -8px);
       }
     }
-
-    &#pull.on span + nav ul {
-      opacity: 1;
-      visibility: visible;
-    }
   }
 }
 
@@ -144,10 +139,10 @@ nav {
       position: absolute;
       z-index: 2;
       right: 5px;
-      top: -400px;
+      top: 50px;
 
       &.hide {
-        top: 50px;
+        top: -400px;
       }
 
       .dropOut {
@@ -187,6 +182,14 @@ nav {
             -ms-transition: background .1s ease-out;
             -o-transition: background .1s ease-out;
             transition: background .1s ease-out;
+
+            a {
+            	-webkit-transition: background .1s ease-out;
+            	-moz-transition: background .1s ease-out;
+            	-ms-transition: background .1s ease-out;
+            	-o-transition: background .1s ease-out;
+            	transition: background .1s ease-out;
+            }
           }
         }
       }
