last menu transition

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,7 @@
 
 	    <!-- Menu -->
 			<div class="dropdownContain hide">
-				<div class="dropOut">
+				<div class="dropOut hide">
 					<div class="triangle"></div>
 			    <ul>
 			        {% assign name_page = "" %}
