--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -140,6 +140,11 @@ nav {
       z-index: 2;
       right: 5px;
       top: 50px;
+    	-webkit-transition: all .1s ease-out;
+    	-moz-transition: all .1s ease-out;
+    	-ms-transition: all .1s ease-out;
+    	-o-transition: all .1s ease-out;
+    	transition: all .1s ease-out;
 
       &.hide {
         top: -400px;
@@ -148,17 +153,18 @@ nav {
       .dropOut {
         background: white;
         float: left;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
+        opacity: 1;
         border-radius: 4px;
-        -webkit-box-shadow: 0 1px 6px rgba(0,0,0,.15);
-        -moz-box-shadow: 0 1px 6px rgba(0,0,0,.15);
         box-shadow: 0 1px 6px rgba(0,0,0,.15);
         -webkit-transition: all .1s ease-out;
-        -moz-transition: all .1s ease-out;
-        -ms-transition: all .1s ease-out;
-        -o-transition: all .1s ease-out;
-        transition: all .1s ease-out;
+      	-moz-transition: all .1s ease-out;
+      	-ms-transition: all .1s ease-out;
+      	-o-transition: all .1s ease-out;
+      	transition: all .1s ease-out;
+
+        &.hide {
+          opacity: 0;
+        }
 
         .triangle {
           position: absolute;
@@ -174,20 +180,10 @@ nav {
           line-height: 2.5em;
 
           li {
-            -webkit-border-radius: 4px;
-            -moz-border-radius: 4px;
             border-radius: 4px;
-            -webkit-transition: background .1s ease-out;
-            -moz-transition: background .1s ease-out;
-            -ms-transition: background .1s ease-out;
-            -o-transition: background .1s ease-out;
             transition: background .1s ease-out;
 
             a {
-            	-webkit-transition: background .1s ease-out;
-            	-moz-transition: background .1s ease-out;
-            	-ms-transition: background .1s ease-out;
-            	-o-transition: background .1s ease-out;
             	transition: background .1s ease-out;
             }
           }
