--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -49,10 +49,12 @@
 				if($(this).hasClass('on')) {
 					$(this).removeClass('on');
 					$('.dropdownContain').addClass('hide');
+					$('.dropOut').addClass('hide');
 				}
 				else {
 					$(this).addClass('on');
 					$('.dropdownContain').removeClass('hide');
+					$('.dropOut').removeClass('hide');
 				}
 			});
 		});
