--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -140,6 +140,7 @@ nav {
       z-index: 2;
       right: 5px;
       top: 50px;
+      opacity: 1;
     	-webkit-transition: all .1s ease-out;
     	-moz-transition: all .1s ease-out;
     	-ms-transition: all .1s ease-out;
@@ -147,25 +148,17 @@ nav {
     	transition: all .1s ease-out;
 
       &.hide {
-        top: -400px;
+        opacity: 0;
       }
 
       .dropOut {
         position: relative;
         background: $background-color;
         float: left;
-        border: 1px solid #e6e6e6;
-
         opacity: 1;
-        margin-top: 8px;
-
+        border: 1px solid #e6e6e6;
         border-radius: 4px;
         box-shadow: 0 1px 6px rgba(0,0,0,.15);
-        -webkit-transition: all .1s ease-out;
-      	-moz-transition: all .1s ease-out;
-      	-ms-transition: all .1s ease-out;
-      	-o-transition: all .1s ease-out;
-      	transition: all .1s ease-out;
 
         &:before, &:after {
           bottom: 100%;
@@ -192,7 +185,6 @@ nav {
 
         &.hide {
           opacity: 0;
-          margin-top: 0px;
         }
 
         ul {
@@ -201,11 +193,6 @@ nav {
 
           li {
             border-radius: 4px;
-            transition: background .1s ease-out;
-
-            a {
-            	transition: background .1s ease-out;
-            }
           }
         }
       }
